--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ spring:
     show-sql: true
     open-in-view: false
     hibernate:
-      ddl-auto: validate #create  | update | create | create-drop
+      ddl-auto: create #create  | update | create | create-drop
     properties:
       hibernate:
         format_sql: true
@@ -17,4 +17,4 @@ spring:
       path: /h2-console
       settings:
         trace: false
-        web-allow-others: false
+      web-allow-others: false
